[tool.poetry]
name = "my_krml_24714673"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Joanne Siarivita"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
